--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 70px;
+  height: 80px;
   background: rgba(255,255,255,0.9);
   border-bottom: 1px solid #e0dfdb;
   z-index: $z-navigation;
@@ -14,7 +14,7 @@
 }
 
 .nav-logo {
-  margin: 5px 15px;
+  margin: 10px 15px;
   width: 60px;
   height: 60px;
   float: left;
