--- a/src/assets/scss/_project-list.scss
+++ b/src/assets/scss/_project-list.scss
@@ -2,7 +2,7 @@
 .project-list {
   position: relative;
   list-style: none;
-  margin: 0 auto 100px auto;
+  margin: 0 auto 0 auto;
   max-width: 1200px;
   padding: 0;
   @include clearfix();
