--- a/src/assets/stylesheets/style.css
+++ b/src/assets/stylesheets/style.css
@@ -124,12 +124,35 @@ h1, h2, h3 {
 .wf-loading h1, .wf-loading h2, .wf-loading h3 {
   visibility: visible; }
 
+.loading-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: white;
+  z-index: 5000;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: all 400ms ease;
+          transition: all 400ms ease; }
+
+.wf-loading .loading-overlay {
+  visibility: visible;
+  opacity: 1; }
+
+.wf-active .loading-overlay {
+  visibility: hidden;
+  opacity: 0;
+  -webkit-animation: fade 400ms ease;
+          animation: fade 400ms ease; }
+
 .nav {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 70px;
+  height: 80px;
   background: rgba(255, 255, 255, 0.9);
   border-bottom: 1px solid #e0dfdb;
   z-index: 2000;
@@ -139,7 +162,7 @@ h1, h2, h3 {
           transition: all 400ms ease-in; }
 
 .nav-logo {
-  margin: 5px 15px;
+  margin: 10px 15px;
   width: 60px;
   height: 60px;
   float: left;
@@ -314,7 +337,6 @@ h1, h2, h3 {
 /* Header / Hero Styles */
 .header {
   position: relative;
-  min-height: 100vh;
   width: 100%;
   padding-top: 70px;
   overflow: auto; }
@@ -322,6 +344,7 @@ h1, h2, h3 {
 .index-header {
   background-image: url('../images/index-header/notebook.png');
   background-repeat: no-repeat;
+  min-height: 100vh;
   background-size: auto 80%;
   background-position: center 100px;
   overflow: hidden; }
@@ -330,11 +353,12 @@ h1, h2, h3 {
   position: absolute;
   left: 0;
   right: 0;
-  top: 77%; }
+  top: 80%; }
 
 .index-header-copy-xaxis {
   width: 100%;
   margin: auto;
+  margin-left: 30px;
   text-align: center;
   text-shadow: 1px 1px 0 white; }
 
@@ -357,7 +381,7 @@ h1, h2, h3 {
 .project-list {
   position: relative;
   list-style: none;
-  margin: 0 auto 100px auto;
+  margin: 0 auto 0 auto;
   max-width: 1200px;
   padding: 0; }
   .project-list:after {
@@ -572,19 +596,13 @@ h1, h2, h3 {
 .footer-social-icons_item {
   display: table-cell;
   padding: 10px;
-  width: 100px;
-  height: 100px; }
-  @media (min-width: 35em) and (max-width: 50em) {
-    .footer-social-icons_item {
-      width: 80px;
-      height: 80px; } }
+  -webkit-transition: opacity 400ms ease;
+          transition: opacity 400ms ease; }
   @media (min-width: 35em) {
     .footer-social-icons_item {
       display: inline-block; } }
-  @media (min-width: 50em) {
-    .footer-social-icons_item {
-      width: 100px;
-      height: 100px; } }
+  .footer-social-icons_item:hover {
+    opacity: 0.6; }
 
 .footer-social-icons_link {
   display: block;
@@ -598,7 +616,7 @@ h1, h2, h3 {
     display: block;
     width: 0;
     height: 100%; }
-  .footer-social-icons_link[href^="http://www.facebook"] {
+  .footer-social-icons_link[href^="http://www.facebook.com"] {
     background-image: url('../images/icons/facebook.svg'); }
   .footer-social-icons_link[href^="http://www.twitter"] {
     background-image: url('../images/icons/twitter.svg'); }
@@ -618,7 +636,6 @@ h1, h2, h3 {
   margin: 0 auto;
   width: 100px;
   height: 100px;
-  background-size: contain;
   background-repeat: no-repeat;
   background-position: 50% 50%; }
   .project-logo:before, .project-logo:after {
@@ -738,6 +755,8 @@ h1, h2, h3 {
     display: block; }
   .index-header {
     background-position: center 80px; }
+  .index-header-copy-xaxis {
+    margin-left: 0; }
   .project-list-filter {
     margin-bottom: 100px; }
   .filter-list-category {
@@ -790,6 +809,16 @@ h1, h2, h3 {
   .project-list-link {
     width: 300px;
     height: 300px; } }
+
+@media (min-width: 1279px) {
+  .header {
+    min-height: 100vh; } }
+
+@media (min-width: 1400px) {
+  .f-1-5 {
+    font-size: 2em; }
+  .adjective {
+    font-size: 3em; } }
 
 .hll {
   background-color: #ffffcc; }
